syntax = "proto3";
import "Types.proto";
option java_package = "com.ccg.ancientaliens.protocol";

/**
 * Messages that will be send by the server during a game
 */

//This will be send when a game state changes to notify the client to update display 
message UpdateGameState {
    GameState game = 1;
}

//This will be send when a player loses a game
message Loss {
    string GameID = 1;
}

//This will be send when a player wins the game
message Win {
    string GameID = 1;
}

//This will be send when a player needs order a list of cards
message OrderCards {
    GameState game = 1;
    repeated Card cardsToOrder = 2;
}

message SelectFrom {
    SelectFromType messageType = 1;
    GameState game = 2;
    int32 selectionCount = 3;
    repeated Card candidates = 4;
    repeated string canSelected = 5;
}

message SelectXValue {
    GameState game = 1;
    int32 maxXValue = 2;
}

//This will be send when a player needs to be selected
message SelectPlayer {
    GameState game = 1;
}

message ServerGameMessage {
    oneof payload {
        UpdateGameState         updateGameState = 8;
        Loss                    loss = 10;
        Win                     win = 11;
        OrderCards              orderCards = 12;
        SelectFrom              selectFrom = 13;
        SelectPlayer            selectPlayer = 18;
        SelectXValue            selectXValue = 19;
    }
}
